{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 562,
  "lineage": "05e98d8a-9b3e-32cc-bbbc-ecf7d395c119",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sample_NAT_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0abaa5b0faf689830",
            "arn": "arn:aws:ec2:ap-northeast-1:464636769294:instance/i-0fbe1c92f812f60d1",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fbe1c92f812f60d1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-user",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07a513e12cdf5ecef",
            "private_dns": "ip-10-0-1-158.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.158",
            "public_dns": "ec2-18-183-215-196.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.183.215.196",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08c5d538e0c4e70a6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0b6b42764f161402f",
            "tags": {
              "Name": "NAT"
            },
            "tags_all": {
              "Name": "NAT"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00846328b3410764a"
            ]
          },
          "dependencies": [
            "aws_security_group.sample_sg",
            "aws_subnet.sample_subnet",
            "aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sample_pub_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0abaa5b0faf689830",
            "arn": "arn:aws:ec2:ap-northeast-1:464636769294:instance/i-055b3e94a55847007",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-055b3e94a55847007",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-user",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-087d1338b83ff3ebe",
            "private_dns": "ip-10-0-2-10.ap-northeast-1.compute.internal",
            "private_ip": "10.0.2.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-065eeb66800440aaa",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03bd98ad103aac89d",
            "tags": {
              "Name": "pri"
            },
            "tags_all": {
              "Name": "pri"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00846328b3410764a"
            ]
          },
          "dependencies": [
            "aws_security_group.sample_sg",
            "aws_subnet.sample_subnet2",
            "aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sample_step_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0abaa5b0faf689830",
            "arn": "arn:aws:ec2:ap-northeast-1:464636769294:instance/i-06728c83a78089ca7",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06728c83a78089ca7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-user",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fa06cb3071fe3e0d",
            "private_dns": "ip-10-0-1-190.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.190",
            "public_dns": "ec2-52-194-249-66.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.194.249.66",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0773875bb9e107971",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b6b42764f161402f",
            "tags": {
              "Name": "step"
            },
            "tags_all": {
              "Name": "step"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00846328b3410764a"
            ]
          },
          "dependencies": [
            "aws_security_group.sample_sg",
            "aws_subnet.sample_subnet",
            "aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sample_web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0abaa5b0faf689830",
            "arn": "arn:aws:ec2:ap-northeast-1:464636769294:instance/i-0b9a9b041280773c0",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b9a9b041280773c0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-user",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0775e4f1a117704bc",
            "private_dns": "ip-10-0-1-10.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.10",
            "public_dns": "ec2-13-113-42-136.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "13.113.42.136",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e3338bb72fcd0ef2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b6b42764f161402f",
            "tags": {
              "Name": "web"
            },
            "tags_all": {
              "Name": "web"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00846328b3410764a"
            ]
          },
          "dependencies": [
            "aws_security_group.sample_sg",
            "aws_subnet.sample_subnet",
            "aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sample_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:464636769294:internet-gateway/igw-07cff895f2b38b36f",
            "id": "igw-07cff895f2b38b36f",
            "owner_id": "464636769294",
            "vpc_id": "vpc-0b8c7eaaf3b0499f8"
          },
          "dependencies": [
            "aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:464636769294:route-table/rtb-010fe9bf7617705ad",
            "id": "rtb-010fe9bf7617705ad",
            "owner_id": "464636769294",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "i-0fbe1c92f812f60d1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b8c7eaaf3b0499f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.sample_NAT_server",
            "aws_security_group.sample_sg",
            "aws_subnet.sample_subnet",
            "aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sample_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:464636769294:route-table/rtb-0777ee23c65e57fc4",
            "id": "rtb-0777ee23c65e57fc4",
            "owner_id": "464636769294",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07cff895f2b38b36f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b8c7eaaf3b0499f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sample_igw",
            "aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sample_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046e1ca957054bdbe",
            "route_table_id": "rtb-0777ee23c65e57fc4",
            "subnet_id": "subnet-0b6b42764f161402f"
          },
          "dependencies": [
            "aws_internet_gateway.sample_igw",
            "aws_route_table.sample_rtb",
            "aws_subnet.sample_subnet",
            "aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sample_rt_assoc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8c10ccf80c8eb36",
            "route_table_id": "rtb-010fe9bf7617705ad",
            "subnet_id": "subnet-03bd98ad103aac89d"
          },
          "dependencies": [
            "aws_instance.sample_NAT_server",
            "aws_route_table.nat_rtb",
            "aws_security_group.sample_sg",
            "aws_subnet.sample_subnet",
            "aws_subnet.sample_subnet2",
            "aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sample_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:464636769294:security-group/sg-00846328b3410764a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00846328b3410764a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sample-sg",
            "name_prefix": "",
            "owner_id": "464636769294",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b8c7eaaf3b0499f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sample_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:464636769294:subnet/subnet-0b6b42764f161402f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0b6b42764f161402f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "464636769294",
            "tags": {
              "Name": "Sub1"
            },
            "tags_all": {
              "Name": "Sub1"
            },
            "vpc_id": "vpc-0b8c7eaaf3b0499f8"
          },
          "dependencies": [
            "aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sample_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:464636769294:subnet/subnet-03bd98ad103aac89d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-03bd98ad103aac89d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "464636769294",
            "tags": {
              "Name": "Sub2"
            },
            "tags_all": {
              "Name": "Sub2"
            },
            "vpc_id": "vpc-0b8c7eaaf3b0499f8"
          },
          "dependencies": [
            "aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sample_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:464636769294:vpc/vpc-0b8c7eaaf3b0499f8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03b06dc627c8528fb",
            "default_route_table_id": "rtb-055197b78256c04b2",
            "default_security_group_id": "sg-0c03658f51ef869f9",
            "dhcp_options_id": "dopt-0ee225a2e0111db51",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b8c7eaaf3b0499f8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-055197b78256c04b2",
            "owner_id": "464636769294",
            "tags": {
              "Name": "VPC1"
            },
            "tags_all": {
              "Name": "VPC1"
            }
          }
        }
      ]
    }
  ]
}